Initial work on logic and package metadata
Remove context menu items
Remove irrelevant info from package.json
Remove irrelevant code from ensure-encoding.js

--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "version": "0.0.0",
   "description": "Automatically sets the encoding of a text editor based on the file or file type open in it.",
   "keywords": [
+      "encoding"
   ],
-  "activationCommands": {
-    "atom-workspace": "ensure-encoding:toggle"
-  },
   "repository": "https://github.com/Talon1024/ensure-encoding",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0 <2.0.0"
+    "atom": ">=1.15.0"
   },
   "dependencies": {
   }
